--- a/ColonyGame/ColonyGame.csproj
+++ b/ColonyGame/ColonyGame.csproj
@@ -41,9 +41,45 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
+    <Compile Include="Assets.cs" />
+    <Compile Include="Components\Map.cs" />
+    <Compile Include="Components\MapCreature.cs" />
+    <Compile Include="Components\MapItem.cs" />
+    <Compile Include="Components\Materials\PlainMaterial.cs" />
+    <Compile Include="Components\Stockpile.cs" />
+    <Compile Include="Components\Tasks\Build.cs" />
+    <Compile Include="Components\Tasks\ComplexTask.cs" />
+    <Compile Include="Components\Tasks\DoWork.cs" />
+    <Compile Include="Components\Tasks\Drop.cs" />
+    <Compile Include="Components\Tasks\Haul.cs" />
+    <Compile Include="Components\Tasks\ObtainItem.cs" />
+    <Compile Include="Components\Tasks\Pickup.cs" />
+    <Compile Include="Components\Tasks\PlaceItem.cs" />
+    <Compile Include="Components\Tasks\WalkTo.cs" />
+    <Compile Include="Components\WallTest.cs" />
+    <Compile Include="Components\WorkTypes.cs" />
+    <Compile Include="Console.cs" />
+    <Compile Include="GameScenes\MainGame.cs" />
+    <Compile Include="IGameScene.cs" />
+    <Compile Include="Interfaces\IActor.cs" />
+    <Compile Include="Interfaces\IBuildable.cs" />
+    <Compile Include="Interfaces\IDrawable.cs" />
+    <Compile Include="Interfaces\IHotkeyable.cs" />
+    <Compile Include="Interfaces\IItemFilter.cs" />
+    <Compile Include="Interfaces\IMapObject.cs" />
+    <Compile Include="Interfaces\IMaterial.cs" />
+    <Compile Include="Interfaces\IPositionFixed.cs" />
+    <Compile Include="Interfaces\IPositionMoving.cs" />
+    <Compile Include="Interfaces\ISelectable.cs" />
+    <Compile Include="Interfaces\ITask.cs" />
+    <Compile Include="Interfaces\IWalking.cs" />
+    <Compile Include="Interfaces\IWorkable.cs" />
+    <Compile Include="Interfaces\IZone.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Windows\ConsoleWindow.cs" />
+    <Compile Include="Windows\StatusWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -58,6 +94,17 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GUI\GUI.csproj">
+      <Project>{1416f2ff-b454-45ab-92be-811bfc66f6ad}</Project>
+      <Name>GUI</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\Panes\" />
+    <Folder Include="Windows\Panes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
